welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:10: error: illegal start of simple expression
  for(i<-)
         ^PictureMono2:14: error: ')' expected but '}' found.
}
^